@@ -8,12 +8,6 @@ ok *pendiente sdl1,sdl2,X11. acabar de probar bien
 -sdl en debian 12 32 bits inicializa muy lento
 
 
-
-
-ok -quiza cambiar charset de tema ZEsarUX Plus por el de AtariTOS. Problema de asignar iconos de cerrar, maximizar etc en este charset,
-deben salir como los teníamos ahora en tema ZEsarUX Plus
-
-
 ---------------------
 
 --Inicio lectura mando analógico, como un volante
@@ -29,5 +23,5 @@ Probar en diferentes sistemas:
 
 ---------------------
 
--volumen max y min en external audio source: max sale 127 , min sale 128, no puede ser mayor el minimo que el maximo??
+ok -volumen max y min en external audio source: max sale 127 , min sale 128, no puede ser mayor el minimo que el maximo??
 
