@@ -99,6 +99,7 @@ Fixed visual casette tape when inserting an unsupported tape
 Fixed write protect tab on visual hilow datadrive window
 Fixed File Selector column for "<dir>" text on folders with utf-8 characters
 Fixed separator menu item on stdout video driver
+Fixed showing minimum volume on External Audio Source window
 
 ----
 
